Fix missing scrollbar when there are many collaborators

--- a/packages/collaboration/style/sidepanel.css
+++ b/packages/collaboration/style/sidepanel.css
@@ -76,6 +76,10 @@
                 Collaborators Info Panel
 *************************************************************/
 
+.jp-CollaboratorsPanel {
+  overflow-y: auto;
+}
+
 .jp-CollaboratorsList {
   flex-direction: column;
   display: flex;
